Update to dev-c9dbc9b - Hotfix TM

--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
         <p><a href="https://github.com/MechaDragonX/Toki_wo_Tomare">On GitHub</a></p>
         <h3 class='title'>Release(s): </h3>
         <p>None</p><br>
-        <h3>Development Status: </h3><p class="devstatus">Inactive, Complete</p>
+        <h3>Development Status: </h3><p class="devstatus">Inactive, Incomplete</p>
     </div>
     <div class='project ramsay'>
         <h2 class='title'>Kitchen Nightmares II</h2><br>
         <h3 class='title'>Description: </h3>
         <p>
-            A time-based puzzle game inspired based on the
+            A time-based puzzle game inspired by the
             <a href="https://en.wikipedia.org/wiki/Kitchen_Nightmares" class="mediatitle">Kitchen Nightmares</a>,
             TV show featuring Gordon Ramsay.
             Name derived from that.
