Update to dev-a474724 - Add Random custom 404 messages

--- a/404.html
+++ b/404.html
@@ -1,17 +1,19 @@
 <html>
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1.0; charset=utf-8' />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/404.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="scripts/errorMessage.js"></script> 
     <title>o_0</title>
 </head>
 <body>
     <div class='error'>404</div>
     <div class='message'>
-        <p>
+        <p id='message'>
             o_0<br>
-            Resource not found!
+            Resource not found
         </p>
     </div>
 </body>
